--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <iframe width="0" height="0" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/56123515&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 <title>Suryabhan Singh Vaghela | Information</title>
 
-	<link rel="canonical" href="https://suryabhansv.github.io/" />
-	<link rel="canonical" href="http://suryabhansv.github.io/" />
+	<link rel="canonical" href="https://suryabhansv.github.io/" data-proofer-ignore />
+	<link rel="canonical" href="http://suryabhansv.github.io/" data-proofer-ignore />
+	
 	
 <meta name="title" content="Suryabhan Singh Vaghela | Information">
 <meta name="description" content="B.Tech Computer Science Engineering Specialization in Cloud Based Application (Collaboration with IBM) From Ganpat University application applications assistance award awards bachelor backend bahadur based blockchain buffalo building certifications cgpa challenging cherishes cloud computer context critical currently data developer development education embedded engineering engnieering experience explorer foundation ganpat geek gmail guru hand higher individual Information institute interests introduction july june keen languages learning likes linux london maratho mastery needs percent programming projects python ratlam school science secondary security semester shri singh skills specialization state strategy student students super superior suryabhan suryabhansv systems tasks technologies technology tegh thinking tools topkhanna university vaghela year york">
