--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <meta name="title" content="Suryabhan Singh Vaghela | Information">
 <meta name="description" content="B.Tech Computer Science Engineering Specialization in Cloud Based Application (Collaboration with IBM) From Ganpat University application applications assistance award awards bachelor backend bahadur based blockchain buffalo building certifications cgpa challenging cherishes cloud computer context critical currently data developer development education embedded engineering engnieering experience explorer foundation ganpat geek gmail guru hand higher individual Information institute interests introduction july june keen languages learning likes linux london maratho mastery needs percent programming projects python ratlam school science secondary security semester shri singh skills specialization state strategy student students super superior suryabhan suryabhansv systems tasks technologies technology tegh thinking tools topkhanna university vaghela year york">
 
-<meta name="keywords" content="icloud,cloud computing,cloud,google cloud,cloud storage,cloud games,what is cloud computing,cloud print,cloud computing definition,ibm cloud,iaas,what is cloud,cloud computing tutorial,cloud services,cloud technology,cloud computing courses,cloudapp,cloud computing ppt,cloud computing services,cloud music,cloud computing meaning,types of cloud computing,cloud security,cloud hosting,cloud computing basics">
-<meta name="news_keywords" content="icloud,cloud computing,cloud,google cloud,cloud storage,cloud games,what is cloud computing,cloud print,cloud computing definition,ibm cloud,iaas,what is cloud,cloud computing tutorial,cloud services,cloud technology,cloud computing courses,cloudapp,cloud computing ppt,cloud computing services,cloud music,cloud computing meaning,types of cloud computing,cloud security,cloud hosting,cloud computing basics" />
+<meta name="keywords" content="suryabhan,Suryabhan,singh,Singh,Vaghela,vaghela,ratlam,Ratlam.suryabhansv,Suryabhansv,Suryabhansv@gmail.com,suryabhansv@gmail.com,madhya pradesh,Madhya Pradesh,Cloud,cloud,computing,Computing,blockchain,Blockchain,ibm,Ibm,IBM,Btech,btech,computer,Computer,cse,CSE">
+<meta name="news_keywords" content="suryabhan,Suryabhan,singh,Singh,Vaghela,vaghela,ratlam,Ratlam.suryabhansv,Suryabhansv,Suryabhansv@gmail.com,suryabhansv@gmail.com,madhya pradesh,Madhya Pradesh,Cloud,cloud,computing,Computing,blockchain,Blockchain,ibm,Ibm,IBM,Btech,btech,computer,Computer,cse,CSE" />
 
 <meta property="og:type" content="website">
 <meta property="og:url" content="http://suryabhansv.github.io">
@@ -139,7 +139,7 @@
         <h1 class="mb-0">Suryabhan Singh Vaghela</h1>
 		
         <div class="subheading mb-5">5 Maratho Ka Vas · Topkhanna,Ratlam · 457001 · (+91)7383747135 ·
-          <a title="https://suryabhansv.github.io/" href="mailto:name@email.com">suryabhansv@gmail.com</a>
+          <a title="suryabhansv@gmail.com" href="mailto:name@email.com">suryabhansv@gmail.com</a>
         </div>
      <i>   <p class="lead mb-5" style="font-family:courier;" >" Currently an engineering student at the Ganpat University. Three year of experience in backend, web development and embedded systems. Super geek who cherishes programming, Linux and likes to give a hand to any individual who needs assistance. Keen on building up a superior critical thinking strategy for challenging tasks and learning new technologies and tools. "</p>
       </i>  <div class="social-icons">
