--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-5V4CP5L');</script>
 <!-- End Google Tag Manager -->
 	
-	
+	<!-- VISA Tracking Code for http://suryabhansv.github.io --><script>(function(v,i,s,a){if(!v._visaSettings){v._visaSettings={};}v._visaSettings["c69a7c4e-7129-11e9-b589-901b0edac50a"]={v:"0.3",s:"c69a7c4e-7129-11e9-b589-901b0edac50a",a:"1"};_v=i.getElementsByTagName("head")[0];_a=_v;_i=i.createElement("script");_s=_i;_s.defer="defer";_s.src=s+a+v._visaSettings["c69a7c4e-7129-11e9-b589-901b0edac50a"].v;_a.appendChild(_s);})(window,document,"//app-worker.visitor-analytics.io/main",".js?s=c69a7c4e-7129-11e9-b589-901b0edac50a&v=")</script><!-- VISA Tracking Code for http://suryabhansv.github.io -->
 
 <script type="application/ld+json">{"@context":"http://schema.org","@type":"Blog","url":"http://suryabhansv.github.io"}</script><script type="application/ld+json">{"@context":"http://schema.org","@type":"Organization","name":"Suryabhan Singh Vaghela","url":"http://suryabhansv.github.io","sameAs":["https://www.facebook.com/suryabhansv","https://twitter.com/suryabhansv"]}</script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
