--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   "@type": "person",
   "name": "Suryabhan Singh Vaghela",
   "jobTitle": "Computer Science & Engnieering - Cloud based applications",
-  "url": "https://suryabhansv.github.io/",
+  "url": "https://suryabhansv.github.io",
   "address": {
     "@type": "PostalAddress",
     "streetAddress": "5,Maratho ka vas Topkhanna",
