--- a/index.html
+++ b/index.html
@@ -49,11 +49,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <title>Suryabhan Singh Vaghela | Information</title>
 
 	<link rel="canonical" href="https://suryabhansv.github.io/" data-proofer-ignore />
-	<link rel="canonical" href="http://suryabhansv.github.io/" data-proofer-ignore />
 	
 	
 <meta name="title" content="Suryabhan Singh Vaghela | Information">
-<meta name="description" content="B.Tech Computer Science Engineering Specialization in Cloud Based Application (Collaboration with IBM) From Ganpat University application applications assistance award awards bachelor backend bahadur based blockchain buffalo building certifications cgpa challenging cherishes cloud">
+<meta name="description" content="B.Tech Computer Science Engineering Specialization in Cloud Based Application (Collaboration with IBM) From Ganpat University suryabhan,Suryabhan,singh,Singh,Vaghela,vaghela,ratlam,Ratlam.suryabhansv,Suryabhansv,Suryabhansv@gmail.com,suryabhansv@gmail.com,madhya pradesh,Madhya Pradesh,Cloud,cloud,computing,Computing,blockchain,Blockchain,ibm,Ibm,IBM,Btech,btech,computer,Computer,cse,CSE">
 
 <meta name="keywords" content="suryabhan,Suryabhan,singh,Singh,Vaghela,vaghela,ratlam,Ratlam.suryabhansv,Suryabhansv,Suryabhansv@gmail.com,suryabhansv@gmail.com,madhya pradesh,Madhya Pradesh,Cloud,cloud,computing,Computing,blockchain,Blockchain,ibm,Ibm,IBM,Btech,btech,computer,Computer,cse,CSE">
 <meta name="news_keywords" content="suryabhan,Suryabhan,singh,Singh,Vaghela,vaghela,ratlam,Ratlam.suryabhansv,Suryabhansv,Suryabhansv@gmail.com,suryabhansv@gmail.com,madhya pradesh,Madhya Pradesh,Cloud,cloud,computing,Computing,blockchain,Blockchain,ibm,Ibm,IBM,Btech,btech,computer,Computer,cse,CSE" />
