--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	
 	
 <meta name="title" content="Suryabhan Singh Vaghela | Information">
-<meta name="description" content="B.Tech Computer Science Engineering Specialization in Cloud Based Application (Collaboration with IBM) From Ganpat University ,suryabhan,ratlam.suryabhansv,suryabhansv@gmail.com,cloud,computing,blockchain,IBM,btech,computer,cse">
+<meta name="description" content="Suryabhan Singh Vaghela Persuing B.Tech Computer Science Engineering Specialization in Cloud Based Application (Collaboration with IBM) From Ganpat University.">
 
 <meta name="keywords" content="suryabhan,Suryabhan,singh,Singh,Vaghela,vaghela,ratlam,Ratlam.suryabhansv,Suryabhansv,Suryabhansv@gmail.com,suryabhansv@gmail.com,madhya pradesh,Madhya Pradesh,Cloud,cloud,computing,Computing,blockchain,Blockchain,ibm,Ibm,IBM,Btech,btech,computer,Computer,cse,CSE">
 <meta name="news_keywords" content="suryabhan,Suryabhan,singh,Singh,Vaghela,vaghela,ratlam,Ratlam.suryabhansv,Suryabhansv,Suryabhansv@gmail.com,suryabhansv@gmail.com,madhya pradesh,Madhya Pradesh,Cloud,cloud,computing,Computing,blockchain,Blockchain,ibm,Ibm,IBM,Btech,btech,computer,Computer,cse,CSE" />
