--- a/index.html
+++ b/index.html
@@ -125,20 +125,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	  <ul class="navbar-nav">
         <li class="nav-item">
-          <a title="https://suryabhansv.github.io/" title="https://suryabhansv.github.io/" class="nav-link js-scroll-trigger" href="#about">About</a>
+          <a title="About" class="nav-link js-scroll-trigger" href="#about">About</a>
         </li>
        
         <li class="nav-item">
-          <a title="https://suryabhansv.github.io/" title="https://suryabhansv.github.io/" class="nav-link js-scroll-trigger" href="#education">Education</a>
+          <a title="Education" class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
         <li class="nav-item">
-          <a title="https://suryabhansv.github.io/" class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+          <a title="Skill" class="nav-link js-scroll-trigger" href="#skills">Skill</a>
         </li>
         <li class="nav-item">
-          <a title="https://suryabhansv.github.io/" class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+          <a title="Project" class="nav-link js-scroll-trigger" href="#interests">Project</a>
         </li>
         <li class="nav-item">
-          <a title="https://suryabhansv.github.io/" class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+          <a title="Certificate" class="nav-link js-scroll-trigger" href="#awards">Certificate</a>
         </li>
       </ul>
 
@@ -273,7 +273,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
+        <h2 class="mb-5">Certifications</h2>
     <b>  
 		<ul class="fa-ul mb-0">
           <li>
