--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	  <ul class="navbar-nav">
         <li class="nav-item">
-          <a title="About" class="nav-link js-scroll-trigger" href="#about">About</a>
+          <a title="About" class="nav-link js-scroll-trigger" href="/" onclick="return false">About</a>
         </li>
        
         <li class="nav-item">
