--- a/about.html
+++ b/about.html
@@ -129,16 +129,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </li>
        
         <li class="nav-item">
-          <a title="Education" class="nav-link js-scroll-trigger" href="/education">Education</a>
+          <a title="Education" class="nav-link js-scroll-trigger" href="/education.html">Education</a>
         </li>
         <li class="nav-item">
-          <a title="Skill" class="nav-link js-scroll-trigger" href="/skill">Skill</a>
+          <a title="Skill" class="nav-link js-scroll-trigger" href="/skill.html">Skill</a>
         </li>
         <li class="nav-item">
-          <a title="Project" class="nav-link js-scroll-trigger" href="/project">Project</a>
+          <a title="Project" class="nav-link js-scroll-trigger" href="/project.html">Project</a>
         </li>
         <li class="nav-item">
-          <a title="Certificate" class="nav-link js-scroll-trigger" href="/certificate">Certificate</a>
+          <a title="Certificate" class="nav-link js-scroll-trigger" href="/certificate.html">Certificate</a>
         </li>
       </ul>
 
