--- a/project.html
+++ b/project.html
@@ -125,20 +125,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	  <ul class="navbar-nav">
         <li class="nav-item">
-          <a title="About" class="nav-link js-scroll-trigger" href="#about">About</a>
+          <a title="About" class="nav-link js-scroll-trigger" href="/about.html">About</a>
         </li>
        
         <li class="nav-item">
-          <a title="Education" class="nav-link js-scroll-trigger" href="#education">Education</a>
+          <a title="Education" class="nav-link js-scroll-trigger" href="/education.html">Education</a>
         </li>
         <li class="nav-item">
-          <a title="Skill" class="nav-link js-scroll-trigger" href="#skills">Skill</a>
+          <a title="Skill" class="nav-link js-scroll-trigger" href="/skill.html">Skill</a>
         </li>
         <li class="nav-item">
-          <a title="Project" class="nav-link js-scroll-trigger" href="#interests">Project</a>
+          <a title="Project" class="nav-link js-scroll-trigger" href="/" onclick="return false">Project</a>
         </li>
         <li class="nav-item">
-          <a title="Certificate" class="nav-link js-scroll-trigger" href="#awards">Certificate</a>
+          <a title="Certificate" class="nav-link js-scroll-trigger" href="/certificate.html">Certificate</a>
         </li>
       </ul>
 
