--- a/about.html
+++ b/about.html
@@ -153,7 +153,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <h1 class="mb-0">Suryabhan Singh Vaghela</h1>
 		
         <div class="subheading mb-5">5 Maratho Ka Vas · Topkhanna,Ratlam · 457001 · (+91)7383747135 ·
-          <a title="suryabhansv@gmail.com" href="mailto:name@email.com">suryabhansv@gmail.com</a>
+          <a title="suryabhansv@gmail.com" href="mailto:suryabhansv@gmail.com">suryabhansv@gmail.com</a>
         </div>
      <i>   <p class="lead mb-5" style="font-family:courier;" >" Currently an engineering student at the Ganpat University. Three year of experience in backend, web development and embedded systems. Super geek who cherishes programming, Linux and likes to give a hand to any individual who needs assistance. Keen on building up a superior critical thinking strategy for challenging tasks and learning new technologies and tools. "</p>
       </i>  <div class="social-icons">
