--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <li>
               
           <li>
-             <img alt="universityoflondon" src="./vendor/universityoflondon.jpg" width="200" height="75">
+             <img alt="universityoflondon" src="./vendor/universityoflondon.JPG" width="200" height="75">
             <a title="https://suryabhansv.github.io/" href="https://www.coursera.org/account/accomplishments/verify/C2T5UD9WBQ9G">Information Security: Context and Introduction - University of London</a></li>
           <li>
           
