--- a/index.html
+++ b/index.html
@@ -140,6 +140,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <li class="nav-item">
           <a title="Certificate" class="nav-link js-scroll-trigger" href="#awards">Certificate</a>
         </li>
+	<li class="nav-item">
+          <a title="Resume" class="nav-link js-scroll-trigger" href="https://raw.githubusercontent.com/Suryabhansv/Suryabhansv.github.io/master/Suryabhan-Singh-Vaghela-Btech-CSE-Cloud-Computing-2020%5BHARD%5D.pdf">Resume</a>
+        </li>
+     
+		  
       </ul>
 
     </div>
