--- a/index.html
+++ b/index.html
@@ -258,17 +258,25 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<b>  <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-             <a title="https://suryabhansv.github.io/" href="#">Semester - 1</a></li>
-        </li>
+             <a title="Movie Ticket Booking" href="#">Movie Ticket Booking</a>
+		  <div>Computer Science & Engnieering - Cloud based applications</div>
+	</li>
+        
           <li>
             <i class="fa-li fa fa-check"></i>
-             <a title="https://suryabhansv.github.io/" href="#">Semester - 2</a></li></li>
+             <a title="Send Mail using Command Prompt" href="#">Send Mail using Command Prompt</a>
+		  <div>Computer Science & Engnieering - Cloud based applications</div>
+	</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-             <a title="https://suryabhansv.github.io/" href="#">Semester - 3</a></li></li>
+             <a title="Cryptocurrency Exchange" href="#">Cryptocurrency Exchange</a></li>
+			<div>Computer Science & Engnieering - Cloud based applications</div>
+			
           <li>
             <i class="fa-li fa fa-check"></i>
-             <a title="https://suryabhansv.github.io/" href="#">Semester - 4</a></li></li>
+             <a title="Student Feedback System" href="#">Student Feedback System</a>
+		  <div>Computer Science & Engnieering - Cloud based applications</div>
+	</li>
         </ul></b>         
 		</div>
 		
