--- a/index.html
+++ b/index.html
@@ -259,23 +259,30 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <li>
             <i class="fa-li fa fa-check"></i>
              <a title="Movie Ticket Booking" href="#">Movie Ticket Booking</a>
-		  <div>Computer Science & Engnieering - Cloud based applications</div>
+		  <div><b>[ Language - C++ ]</b></div>
+<p>Movie ticket booking system is to provide customer to book movie tickets using concepts of classes, objects and inheritance.</p>
 	</li>
         
           <li>
             <i class="fa-li fa fa-check"></i>
              <a title="Send Mail using Command Prompt" href="#">Send Mail using Command Prompt</a>
-		  <div>Computer Science & Engnieering - Cloud based applications</div>
+		  <div><b>[ Language - Python ]</b></div>
+		  <p>This project is about sending mails using python script.</p>
+
 	</li>
           <li>
             <i class="fa-li fa fa-check"></i>
              <a title="Cryptocurrency Exchange" href="#">Cryptocurrency Exchange</a></li>
-			<div>Computer Science & Engnieering - Cloud based applications</div>
+			<div><b>[ Language - Asp.Net ]</b></div>
+			<p>In this project user can convert there one cryptocurrency into other cryptocurrency using api.</p>
+
 			
           <li>
             <i class="fa-li fa fa-check"></i>
              <a title="Student Feedback System" href="#">Student Feedback System</a>
-		  <div>Computer Science & Engnieering - Cloud based applications</div>
+		  <div><b>[ Language - JSP,Java,SQL ]</b></div>
+		  <p>Developed a student’s feedback system using blockchain technology for getting the feedback from students regarding to their subjects and store in blockchain.</p>
+
 	</li>
         </ul></b>         
 		</div>
