--- a/index.html
+++ b/index.html
@@ -258,28 +258,28 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<b>  <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-             <a title="Movie Ticket Booking" href="#">Movie Ticket Booking</a>
+             <a title="Movie Ticket Booking" href="https://github.com/Suryabhansv/Suryabhansv.github.io/blob/master/Projects/movieticketbooking.cpp" target="_blank">Movie Ticket Booking</a>
 		  <div><b>[ Language - C++ ]</b></div>
 <p>Movie ticket booking system is to provide customer to book movie tickets using concepts of classes, objects and inheritance.</p>
 	</li>
         
           <li>
             <i class="fa-li fa fa-check"></i>
-             <a title="Send Mail using Command Prompt" href="#">Send Mail using Command Prompt</a>
+             <a title="Send Mail using Command Prompt" href="https://github.com/Suryabhansv/Suryabhansv.github.io/blob/master/Projects/sendmailusingpython.py" target="_blank">Send Mail using Command Prompt</a>
 		  <div><b>[ Language - Python ]</b></div>
 		  <p>This project is about sending mails using python script.</p>
 
 	</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-             <a title="Cryptocurrency Exchange" href="#">Cryptocurrency Exchange</a></li>
+             <a title="Cryptocurrency Exchange" href="https://github.com/Suryabhansv/Suryabhansv.github.io/blob/master/Projects/Cryptocurrency-Exchange-dotnet.zip" target="_blank">Cryptocurrency Exchange</a></li>
 			<div><b>[ Language - Asp.Net ]</b></div>
 			<p>In this project user can convert there one cryptocurrency into other cryptocurrency using api.</p>
 
 			
           <li>
             <i class="fa-li fa fa-check"></i>
-             <a title="Student Feedback System" href="#">Student Feedback System</a>
+             <a title="Student Feedback System" href="https://github.com/Suryabhansv/Suryabhansv.github.io/blob/master/Projects/Student-feedback-system.zip" target="_blank">Student Feedback System</a>
 		  <div><b>[ Language - JSP,Java,SQL ]</b></div>
 		  <p>Developed a student’s feedback system using blockchain technology for getting the feedback from students regarding to their subjects and store in blockchain.</p>
 
