--- a/index.html
+++ b/index.html
@@ -256,7 +256,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="w-100">
         <h2 class="mb-5">Projects</h2>
 		<b>  <ul class="fa-ul mb-0">
-        
+        <li>
+            <i class="fa-li fa fa-check"></i>
+             <a title="Face Recognition Paymemt Method" href="https://github.com/Suryabhansv/Face-Recognition-Payment-Method" target="_blank">Face Recognition Paymemt Method</a></li>
+			<div><b>[ Language - Python ]</b></div>
+			<p>[[WORKING] Exp. Jan.2020]</p>
+
+			
+          <li>
+          
 	<li>
             <i class="fa-li fa fa-check"></i>
              <a title="Send Whatsapp Message Direct" href="https://suryabhansv.github.io/sendwhatsappmessagedirect/" target="_blank">Send Whatsapp Message Direct</a>
