--- a/project.html
+++ b/project.html
@@ -140,6 +140,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <li class="nav-item">
           <a title="Certificate" class="nav-link js-scroll-trigger" href="/certificate.html">Certificate</a>
         </li>
+		 <li class="nav-item">
+          <a title="Resume" class="nav-link js-scroll-trigger" href="https://raw.githubusercontent.com/Suryabhansv/Suryabhansv.github.io/master/Resume-Suryabhan-Singh-Vaghela-Btech-CSE-Cloud-Computing-2020.pdf" target="_blank">Resume</a>
+        </li>
       </ul>
 
     </div>
@@ -147,15 +150,24 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
   <div class="container-fluid p-0">
 
-<section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
+ <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Projects</h2>
 		<b>  <ul class="fa-ul mb-0">
-          <li>
+        <li>
             <i class="fa-li fa fa-check"></i>
-             <a title="Movie Ticket Booking" href="https://github.com/Suryabhansv/Suryabhansv.github.io/blob/master/Projects/movieticketbooking.cpp" target="_blank">Movie Ticket Booking</a>
-		  <div><b>[ Language - C++ ]</b></div>
-<p>Movie ticket booking system is to provide customer to book movie tickets using concepts of classes, objects and inheritance.</p>
+             <a title="Face Recognition Paymemt Method" href="https://github.com/Suryabhansv/Face-Recognition-Payment-Method" target="_blank">Face Recognition Paymemt Method</a></li>
+			<div><b>[ Language - Python ]</b></div>
+			<p>[[WORKING] Exp. Jan.2020]</p>
+
+			
+          <li>
+          
+	<li>
+            <i class="fa-li fa fa-check"></i>
+             <a title="Send Whatsapp Message Direct" href="https://suryabhansv.github.io/sendwhatsappmessagedirect/" target="_blank">Send Whatsapp Message Direct</a>
+		  <div><b>[ Website ]</b></div>
+<p>Send Whatsapp Message to any user without having there contact saved in your Phone Directory.</p>
 	</li>
         
           <li>
@@ -179,12 +191,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		  <p>Developed a student’s feedback system using blockchain technology for getting the feedback from students regarding to their subjects and store in blockchain.</p>
 
 	</li>
+			<li>
+            <i class="fa-li fa fa-check"></i>
+             <a title="Movie Ticket Booking" href="https://github.com/Suryabhansv/Suryabhansv.github.io/blob/master/Projects/movieticketbooking.cpp" target="_blank">Movie Ticket Booking</a>
+		  <div><b>[ Language - C++ ]</b></div>
+<p>Movie ticket booking system is to provide customer to book movie tickets using concepts of classes, objects and inheritance.</p>
+	</li>
         </ul></b>         
 		</div>
 		
     </section>
-
-
 
   </div>
   <script src="vendor/jquery/jquery.min.js"></script>
