--- a/index.html
+++ b/index.html
@@ -31,15 +31,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   "url": "https://suryabhansv.github.io",
   "address": {
     "@type": "PostalAddress",
-    "streetAddress": "5,Maratho ka vas Topkhanna",
+
     "addressLocality": "Ratlam",
     "addressRegion": "Madhya Pradesh",
     "postalCode": "457001",
     "addressCountry": "India"
   },
-  "email": "suryabhansv@gmail.com",
-  "telephone": "+917383747135",
-  "birthDate": "1998-06-01"
+  "email": "suryabhansv@gmail.com"
 }
  </script>
 	
