--- a/about.html
+++ b/about.html
@@ -31,15 +31,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   "url": "https://suryabhansv.github.io",
   "address": {
     "@type": "PostalAddress",
-    "streetAddress": "5,Maratho ka vas Topkhanna",
+
     "addressLocality": "Ratlam",
     "addressRegion": "Madhya Pradesh",
     "postalCode": "457001",
     "addressCountry": "India"
   },
-  "email": "suryabhansv@gmail.com",
-  "telephone": "+917383747135",
-  "birthDate": "1998-06-01"
+  "email": "suryabhansv@gmail.com"
 }
  </script>
 	
@@ -152,11 +150,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	  
         <h1 class="mb-0">Suryabhan Singh Vaghela</h1>
 		
-        <div class="subheading mb-5">5 Maratho Ka Vas · Topkhanna,Ratlam · 457001 · (+91)7383747135 ·
+        <div class="subheading mb-5"
           <a title="suryabhansv@gmail.com" href="mailto:suryabhansv@gmail.com">suryabhansv@gmail.com</a>
         </div>
-     <i>   <p class="lead mb-5" style="font-family:courier;" >" Currently an engineering student at the Ganpat University. Three year of experience in backend, web development and embedded systems. Super geek who cherishes programming, Linux and likes to give a hand to any individual who needs assistance. Keen on building up a superior critical thinking strategy for challenging tasks and learning new technologies and tools. "</p>
-      </i>  <div class="social-icons">
+     <i> </i>  <div class="social-icons">
           <a title="https://suryabhansv.github.io/" href="https://www.linkedin.com/in/suryabhansinghvaghela/">
             <i class="fab fa-linkedin-in"></i>
           </a>
